--- a/MyWebsite[STYLE].css
+++ b/MyWebsite[STYLE].css
@@ -72,26 +72,26 @@
 }
 
 .myButton {
-	box-shadow: 0px 0px 0px 2px #9fb4f2;
-	background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
-	background-color:#7892c2;
-	border-radius:10px;
-	border:1px solid #4e6096;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:19px;
-	padding:12px 37px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #283966;
+box-shadow: 3px 4px 0px 0px #8a2a21;
+background:linear-gradient(to bottom, #c62d1f 5%, #f7ff00 100%);
+background-color:#c62d1f;
+border-radius:18px;
+border:1px solid #d02718;
+display:inline-block;
+cursor:pointer;
+color:#12e3ff;
+font-family:Arial;
+font-size:17px;
+padding:7px 25px;
+text-decoration:none;
+text-shadow:0px 1px 0px #810e05;
   margin-bottom:10px;
 }
 .myButton:hover {
-	background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
-	background-color:#476e9e;
+background:linear-gradient(to bottom, #f7ff00 5%, #c62d1f 100%);
+	background-color:#f7ff00;	
 }
 .myButton:active {
-	position:relative;
-	top:1px;
+position:relative;
+	top:1px;	
 }
