Font glitch fix v1
Fixed font glitch for chromebook maybe

--- a/MyWebsite[STYLE].css
+++ b/MyWebsite[STYLE].css
@@ -26,7 +26,7 @@
 /* skills style from here */
 .skills{
   text-align: center;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .image{
